--- a/about.html
+++ b/about.html
@@ -22,8 +22,17 @@
         </nav>
     </header>
     <main>
-        <section id="banner"></section>
-    </main>
+<h2>About</h2>
+<h4>"Seattle-based pop star makes indie debut with a hountingly beautiful album"</h4> 
+<h6>- John Tirckle Music Today Post</h6>
+<h4>"Jane Doe is one of the scene's breakput stars"</h4>
+<h6>- John Tirckle Music Today Post</h6>
+
+<div class="imagemabout">
+    <img src="img\jane2.jpg">
+</div>
+
+</main>
     <footer>
         <p>Copyright - Jane Doe</p>
     </footer>
