--- a/about.html
+++ b/about.html
@@ -28,8 +28,7 @@
 <h4>"Jane Doe is one of the scene's breakput stars"</h4>
 <h6>- John Tirckle Music Today Post</h6>
 
-<div class="imagemabout">
-    <img src="img\jane2.jpg">
+<div id="imagem">
 </div>
 
 </main>
