--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
 <h4>"Jane Doe is one of the scene's breakput stars"</h4>
 <h6>- John Tirckle Music Today Post</h6>
 
-<div id="imagem">
-</div>
+<section id="imagem">
+</section>
 
 </main>
     <footer>
