--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+<main class="about">
 <h2>About</h2>
 <h4>"Seattle-based pop star makes indie debut with a hountingly beautiful album"</h4> 
 <h6>- John Tirckle Music Today Post</h6>
