--- a/contact.html
+++ b/contact.html
@@ -21,17 +21,29 @@
             </ul>
         </nav>
     </header>
-    <main>
-<h2>About</h2>
-<h4>"Seattle-based pop star makes indie debut with a hountingly beautiful album"</h4> 
-<h6>- John Tirckle Music Today Post</h6>
-<h4>"Jane Doe is one of the scene's breakput stars"</h4>
-<h6>- John Tirckle Music Today Post</h6>
-
-<section id="imagem">
-</section>
-
-</main>
+    <main class="contatos">
+        <h2 class="contatos">Contact</h2>
+        <h4 class="contatos"> MANAGEMENT | Karen Blanche</h4>
+        <ul class="contact">
+          <li>email: <a href="mailto:info@mysite.html">info@mysite.com</a></li>
+          <li>phone: <a href="tel:123-456-7890">123-456-7890</a></li>
+        </ul>
+        <h4 class="contatos">BOOKING | Daniel Ku</h4>
+        <ul class="contact">
+          <li>email: <a href="mailto:info@mysite.html">info@mysite.com</a></li>
+          <li>phone: <a href="tel:123-456-7890">123-456-7890</a></li>
+        </ul>
+        <h4 class="contatos">LABEL | Wix Records, Jake Coldham</h4>
+        <ul class="contact">
+          <li>email: <a href="mailto:info@mysite.html">info@mysite.com</a></li>
+          <li>phone: <a href="tel:123-456-7890">123-456-7890</a></li>
+        </ul>
+        <h4 class="contatos"> PR | That Girl Pr, Sarah Brookstone</h4>
+        <ul class="contactLast">
+          <li>email: <a href="mailto:info@mysite.html">info@mysite.com</a></li>
+          <li>phone: <a href="tel:123-456-7890">123-456-7890</a></li>
+        </ul>
+      </main>
     <footer>
         <p>Copyright - Jane Doe</p>
     </footer>
